fix: add _debug as optional query param in swagger apis for GET stp/execute
